# FireplaceThermostat

./: .gitignore  LICENSE.txt  README.md  WeatherOutput.txt  current_weather_data.csv  final_weather_data.csv  pyproject.toml  requirements.txt  setup.py
src/fireplace/: MotionTest.py  WeatherOutput.txt  current_weather_data.csv  final_weather_data.csv  layoutHomeScreen.json  main.py  testMQTT.py
src/fireplace/Images/Icons/: fireIcon.xcf
src/fireplace/utils/: defines.py
