[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fireplace"
version = "0.1"
description = "Pi 3 with 7" touch display built to be a fireplace thermostat controller"
authors = [
    { name="Matt", email="matt@mlttek.com" },
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # "some_package>=1.0",
    # "another_package>=2.0",
]

[project.urls]
# repository = "https://github.com/5CatMatt/FireplaceThermostat"